test/libsolidity/syntaxTests/constructor/interface_constructor.sol
interface I {
	constructor() public;
}
// ----
// TypeError 1560: (15-36): Functions in interfaces must be declared external.
// TypeError 6482: (15-36): Constructor cannot be defined in interfaces.
// TypeError 5700: (15-36): Constructor must be implemented if declared.
